Login works, Register not tested
Unfortunately, for some reason, the webcam capture stopped working
suddenly in both Edge and Firefox. Will try laptop restart.

--- a/static/index.html
+++ b/static/index.html
@@ -10,9 +10,8 @@
     </head>
     <body>
         <video id="webcam" width="500" height="500" preload="auto">Your browser doesn't support video</video>
-        <canvas id="still_photo" width="500" height="500">Your browser doesn't support canvas</canvas>
-        <img id="pic">
-        <button onclick="takePic()">Take Pic!</button>
+        <canvas id="still_photo" width="500" height="500" hidden>Your browser doesn't support canvas</canvas>
+        <button onclick="login()">Login</button>
         <script src="js/script.js"></script>
     </body>
 </html>
